Remove wrong const

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /benchmark_results/digits_benchmark_binary64.pdf
 /benchmark_results/uniform_benchmark_binary32.pdf
 /benchmark_results/uniform_benchmark_binary64.pdf
+/vc2019/GPUCache
