--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /benchmark_results/uniform_benchmark_binary32.pdf
 /benchmark_results/uniform_benchmark_binary64.pdf
 /vc2019/GPUCache
+/benchmark_results/uniform_benchmark_binary32_notzr.pdf
+/benchmark_results/digits_benchmark_binary32_notzr.pdf
