--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /vc2019/GPUCache
 /benchmark_results/uniform_benchmark_binary32_notzr.pdf
 /benchmark_results/digits_benchmark_binary32_notzr.pdf
+/vc2019/Win32
