Add more definitions to gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,15 @@
+* text=auto
+
+CMakeLists.txt eol=lf
+*.h eol=lf
+*.cpp eol=lf
+*.cmake eol=lf
+*.cmake.in eol=lf
+
+*.png binary
+*.pdf binary
+*.csv binary
+
 benchmark_results/shaded_plots/* linguist-vendored
 benchmark/ryu/* linguist-vendored
 benchmark/grisu_exact/* linguist-vendored
