No need to configure the file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,13 +76,6 @@ install(TARGETS dragonbox dragonbox_to_chars
 
 set(dragonbox_install_cmakedir "${CMAKE_INSTALL_LIBDIR}/cmake/${dragonbox_directory}")
 
-configure_package_config_file(
-        cmake/dragonboxConfig.cmake.in
-        "${PROJECT_BINARY_DIR}/dragonboxConfig.cmake"
-        INSTALL_DESTINATION "${dragonbox_install_cmakedir}"
-        NO_SET_AND_CHECK_MACRO
-        NO_CHECK_REQUIRED_COMPONENTS_MACRO)
-
 write_basic_package_version_file(
         dragonboxConfigVersion.cmake
         VERSION ${PROJECT_VERSION}
@@ -94,7 +87,7 @@ install(EXPORT dragonboxTargets
         DESTINATION "${dragonbox_install_cmakedir}")
 
 install(FILES
-        "${PROJECT_BINARY_DIR}/dragonboxConfig.cmake"
+        "${PROJECT_SOURCE_DIR}/cmake/dragonboxConfig.cmake"
         "${PROJECT_BINARY_DIR}/dragonboxConfigVersion.cmake"
         DESTINATION "${dragonbox_install_cmakedir}")
 
